--- a/package.json
+++ b/package.json
@@ -1,16 +1,18 @@
 {
-  "name": "today",
+  "name": "starwars-express",
   "version": "1.0.0",
-  "main": "server1.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "ISC",
+  "description": "",
+  "main": "server.js",
   "dependencies": {
-    "body-parser": "^1.18.2",
-    "express": "^4.16.2"
+    "body-parser": "^1.15.0",
+    "express": "^4.13.4"
   },
   "devDependencies": {},
-  "description": ""
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js",
+    "watch": "nodemon server.js"
+  },
+  "author": "",
+  "license": "ISC"
 }
